--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="./img/logo.png">
     
     <!-- Linking Stylesheets -->
-    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
 </head>
