--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
             <!-- Social Links as buttons with icons -->
             <div class="social-links">
-                <a href="https://twitter.com/bluechainapp" target="_blank" class="social-btn" aria-label="Twitter">
-                    <i class="fab fa-twitter"></i>
+                <a href="https://x.com/bluechainapp" target="_blank" class="social-btn" aria-label="Twitter">
+                    <i class="fab fa-x-twitter"></i>
                 </a>
                 <a href="https://t.me/bluechainapp" target="_blank" class="social-btn" aria-label="Telegram">
                     <i class="fab fa-telegram-plane"></i>
