--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     
     <!-- Linking Stylesheets -->
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
+    <script src="https://kit.fontawesome.com/bc3c3a6895.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
