Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <script src="https://kit.fontawesome.com/bc3c3a6895.js" crossorigin="anonymous"></script>
+
+    <!-- Google Analytics Tracking Code -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GNSZ9CCEN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-8GNSZ9CCEN');
+    </script>
 </head>
 <body>
 
