--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <script src="https://kit.fontawesome.com/bc3c3a6895.js" crossorigin="anonymous"></script>
 
     <!-- Google Analytics Tracking Code -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8GNSZ9CCEN"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CD77WWB25F"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-8GNSZ9CCEN');
+      gtag('config', 'G-CD77WWB25F');
     </script>
 </head>
 <body>
