--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="content">
         <div>
             <!-- Logo with Alt text for SEO -->
-            <img src="./img/logo.png" alt="Bluechain Project Logo - $H2O Solana Token" class="logo">
+            <img src="./img/logo.svg" alt="Bluechain Project Logo - $H2O Solana Token" class="logo">
 
             <!-- Contract Address Section -->
             <div class="contract-address-container">
