hide contract address

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             <img src="./img/logo.svg" alt="Bluechain Project Logo - $H2O Solana Token" class="logo">
 
             <!-- Contract Address Section -->
-            <div class="contract-address-container">
+            <div class="contract-address-container" style="display:none">
                 <div class="contract-box">
-                    <span class="contract-address" id="contractAddress">9xQeWvG816vcyptJ2gY6BiwNBRUA14iQv9U66vKHcL8k</span>
+                    <span class="contract-address" id="contractAddress"></span>
                     <button class="copy-btn" onclick="copyAddress()">
                         <i class="fas fa-copy"></i>
                     </button>
